[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "cmathlib_CYBERFOX"
version = "1.0"
authors = [
  { name="Cyberfox863"},
]
description = "A small maths package to help you with your programming"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"